# AeroPollen

./: .gitignore  README.md  methods.py  pyproject.toml  requirements.txt  test.ipynb
aeropollen/: __init__.py  init.py  methods.py
aeropollen/config/: clinical_thresholds.yaml
aeropollen/preprocessing/: __init__.py  interpolation.py
aeropollen/ps_methods/: clinical.py  methods.py  percentage.py
aeropollen/tests/: __init__.py  test_methods.py
