[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aeropollen"
version = "0.1.0"
description = "Simplified pollen-season calculator (Python version of AeRobiology)"
authors = [{ name = "Thomas Tasioulis", email = "thomas.tasioulis92@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["pandas", "numpy"]

[tool.setuptools.packages.find]
where = ["."]
